# devNotes

./: .gitignore  LICENSE  Q&A.md  README.md  TIPS.md  装修.md
Aeronautics/: 卫星通信链路仿真模型.md  描述卫星常用坐标系.md  计算卫星位置姿态角等信息.md  轨道算法（坐标系转换及位姿）.md
Aeronautics/TLE（两行轨道数据）卫星数据格式解析/: TLE（两行轨道数据）卫星数据格式解析.md
DataStructure/: .gitignore  CMakeLists.txt  README.md  Structs.h  graph.h  main.cpp  search.cpp  search.h  sort.cpp  tree.h
DataStructure/BUAA/: CMakeLists.txt  Chapter2_Linear_List.cpp  Chapter2_Linear_List.h
DataStructure/DSACPP/: CMakeLists.txt
DataStructure/WangDao/: CMakeLists.txt  LinkedList.cpp  StackAndQueue.cpp  Structs.h  main.cpp  sort.cpp  sort.h  tree.cpp  tree.h
LaTex/: latex常用指令.md  字体找不到.md
LaTex/Conference-LaTeX/: IEEEtran.cls  conference_041818.tex
LaTex/Effective Methods for Capturing Cattle Rustlers/: main.tex
LaTex/ElegantBook/: clean.bat
LaTex/PKUpaper/: main.aux  main.out  main.run.xml  main.tex  main.toc  pkuthss.cls  ref.bib
LaTex/Preprint Book Manuscript Template/: book.tex  ptmt.sty  references.bib
LaTex/latex常用指令/: latex常用指令.md
LaTex/nuaa.cls-1.7.0/: LICENSE  README.md  nuaa.cls  nuaa.tex
LaTex/resume/: format.cls  resume.tex
Matlab/: .gitignore  OrbitForcast.m  data.xlsx  ice.m  k_means.m  main.m  result.csv
Matlab/0624/: a.xlsx  fun.m  goldFinger.m  untitled.m
Matlab/2-2/: createFit2_2.m  main.m
Matlab/robot/: ABtrace.m  FGtrace.m  Robot2D.m  circle01算法描述.docx  draw.m  main.m
Matlab/stkmodel/: a2100.mdl  abrixas.mdl  aces.mdl  adeos.mdl  afristar.mdl  alexis.mdl
Matlab/绝缘子/: 004.eps  01.eps  03.eps  04.eps  B.m  bfilter2.m  test01.m  test02.m  test03.m
Matlab/边界线/: 2.txt  obj__read.m
OS/: README.md
Python/: Python日常笔记.md  generateXML.py
Python/AVQA/: 文本编辑.txt  频模态与声音模态的表示与融合技术研究.md
Python/DealLog/: .gitignore  main.py  new_file.txt
Python/DrawInstance/: bing.py  main.py  test.py  two_plots.py
Python/GenerateDOCX/: .gitignore  Clustering.py  GenerateTable.py  PARAMS.txt  Program.xmind  README.md  collectData.py  example.csv  multithread.py  new\2022.11.18.docx  pylmpl.py  pytmpl.py  pytmpl_old.py  refactor.py  simple.py  word2pdf.py  xxx.py  情报要报.docx
Python/ProcessingXMLFiles/: .gitignore  main.py
Python/RateData/: .gitignore  main.py
Python/Sat/: kepler_to_blh.py  kepler_to_j2000.py
Python/bound/: .gitignore  1.24.md  3pointsplane.py  README.md  main.py  projection0204.py
Python/draw_function_of_two_variables_/: main.py
Python/envGold/: README.md  test01.py  writeFile.py
Python/gbk2utf-8/: gbk2utf-8.py  main.py
Python/markdown2latex/: .gitignore  CMakeLists.txt  MdFile.py  SimEnginePlatform.vcxproj  TIPS.tex  gpt.py  main.py  txt.txt  vc2cmake.py
Python/markdown2latex/infile/: easyTIPS.md
Python/statisticalIntervals/: main.py
Python/vtk_development/: Class.py  drawabound.py  (+3 more)
Qt/: Qt5学习之路.md
Qt/thread/: .gitignore  CMakeLists.txt  Work.cpp  Work.h  main.cpp  widget.cpp  widget.h
code/: .gitignore
cpp/: ChernoCPP.md  CppTemplateTutorial.md  UTF8withBOM.cpp  basic IO.md  basicAlg.md  boost log小记.md  boost_log.md  boost_timer.md  c++ 右值引用.md  c++3D库.md  c++之指针和引用作为函数参数传递时的区别.md  c++笔记.md  c++解析网络消息.md  cmake使用示例与整理总结.md  cpp_compilation_error_sorting.md  cpp多线程笔记.md  gcc指令.md  houjie.md  macroApp.cpp  mysql.md  new和malloc关键字.md  notesOnEasylogging++.md  vs2022调试笔记.md  zhengli.md  zxz01.txt  zxz_vs配置.md  代码片段.md  单例模式代码片段.md  带指针类的初始化.md  指针引用带来的思考.md
cpp/BOOSTlog/: .gitignore  CMakeLists.txt  InitLog.cpp  main.cpp
cpp/CppConcurrency/: .gitignore  CMakeLists.txt  CppConcurrency-Chapter2.md  CppConcurrency-Chapter3.md  cpp多线程笔记.md  thread_msg_server.cpp  xmsg_server.cpp
cpp/CppConcurrency/XThreadPool/: CMakeLists.txt  XThreadPool.cpp  XThreadPool.h  main.cpp
cpp/CppConcurrency/thread_msg_server/: CMakeLists.txt  thread_msg_server.cpp  xmsg_server.cpp  xmsg_server.h  xthread.cpp
cpp/CppConcurrency/thread_msg_server_condition/: CMakeLists.txt  thread_msg_server_condition.cpp  xmsg_server.cpp  xmsg_server.h  xthread.cpp  xthread.h
cpp/MySQLConnectorCPP/: .gitignore  CMakeLists.txt  README.md  main.cpp
cpp/MySQLConnectorCPP/thireparty/: libcrypto.1.1.dylib  libssl.1.1.dylib
cpp/Qt/AATools/: .gitignore  CMakeLists.txt  main.cpp  param_deliver.h  pch.h
cpp/Qt/AATools/src/: info.h  mainwindow.cpp  mainwindow.h
cpp/Qt/AATools/src/oe2tle/: oe2tle.cpp  oe2tle.h
cpp/Qt/LoanCalculator/: .gitignore  CMakeLists.txt
cpp/Qt/LoanCalculator/src/: main.cpp
cpp/Qt/LoanCalculator/style/qt-material-widgets/: .qmake.stash
cpp/Qt/markdown2latex/: .gitignore  CMakeLists.txt  markdown2latex.ini
cpp/Qt/markdown2latex/src/: InitLog.cpp  MdFile.cpp  MdFile.h  ParseINI.cpp  ParseINI.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  param_deliver.h  pch.h
cpp/Qt/markdown2latex/test/input/: ChernoCPP.tex  TIPS.md
cpp/Qt/refactoring/: .gitignore  CMakeLists.txt  README.md  param_deliver.h
cpp/Qt/refactoring/Sources/: logo.rc
cpp/Qt/refactoring/src/: mainwindow.cpp  mainwindow.ui  param_deliver.h
cpp/Qt/refactoring/src/BoostLog/: ParseINI.h
cpp/Qt/refactoring/src/Thread/: Controller.h  MyThread.cpp
cpp/Qt/refactoring/src/seven/: CMakeLists.txt
cpp/cppMath/: .gitignore  CMakeLists.txt
cpp/cppMath/src/EigenPolyfit/: eigen_polyfit.cpp  matplotlibcpp.h
cpp/cpp_python/: .gitignore  CMakeLists.txt  main.cpp
cpp/refactoring/: .gitignore  CMakeLists.txt  README.md  Refactoring.ini  StdAfx.h
cpp/refactoring/src/: Controller.cpp  DataManager.cpp  DataManager.h  MyThread.cpp  MyThread.h  StdAfx.h  Worker.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
cpp/refactoring/src/BoostLog/: CMakeLists.txt  InitLog.cpp  InitLog.h  ParseINI.cpp
cpp/refactoring/src/Thread/: CMakeLists.txt  Controller.h  MyThread.h  Worker.h
cpp/refactoring/src/seven/: Student.h
info/: TIPS.md  Thumbs.db  devExperience.md  tips.md
others/: ADC效能分析模型  ADC效能分析模型.md  Fast-DDS在Linux平台编译.md  Install git from source offline.md  Linux部署.net Core项目.md  MySQL.md  OSG加载倾斜摄影数据.md  Xcode快捷键.md  cmakelist添加资源文件.md  cmake使用示例与整理总结.md  cmake组织多个项目（类vs解决方案和项目）.md  git使用规范.md  构建C:C++良好的工程结构.md
(+2510 files in other folders)
