cmake_minimum_required(VERSION 3.15)
project(SimEnginePlatform)

set(SOURCES
  Application.cpp
  BaseModel\Coordinate\BLH.cpp
  BaseModel\Manager\Manager.cpp
  BaseModel\Render\Color.cpp
  BaseModel\Render\Colors.cpp
  BaseModel\Render\Renderer.cpp
  BaseModel\Tansform\RotateAngle.cpp
  BaseModel\Tansform\SceneObject.cpp
  BaseModel\Tansform\Transform.cpp
  BaseModel\Tansform\Vector3.cpp
  BaseModel\Time\Date.cpp
  BaseModel\Time\ObjectTime.cpp
  BaseModel\Time\TimeControl.cpp
  BaseModel\Time\TimePeriod.cpp
  CommonFunction\AssistFunc.cpp
  CommonFunction\StringOperation.cpp
  Comm\AEHF_DK_Module.cpp
  Comm\CoverCalculateFoundation.cpp
  Comm\Transmission.cpp
  ManagerModel\BatteryPowerManager\BatteryPowerManager.cpp
  ManagerModel\DDInterceptionSystem\DDInterceptionManager.cpp
  ManagerModel\RadarObservePlan\RadarObservePlan.cpp
  ManagerModel\SolarArryPowerCalculation\SolarArryPowerCalculation.cpp
  MyThread.cpp
  ObjectModel\Sensor\SensorShape\CoverPercentage.cpp
  CreatObject.cpp
  Data\CommonParameter.cpp
  Data\DataCache.cpp
  Data\SceneManager.cpp
  Data\SceneTree.cpp
  EditObject.cpp
  GetInfo.cpp
  Initial.cpp
  License\License.cpp
  Log\InitLog.cpp
  Log\ParseINI.cpp
  main.cpp
  ManagerModel\AreaCoverageAnalysis\AreaCoverageAnalysis.cpp
  ManagerModel\ComCoverAnalysisManager\ComCoverAnalysisManager.cpp
  ManagerModel\ComLinkVisibleAnalysisManager\ComLinkVisibleAnalysisManager.cpp
  ManagerModel\CoverAnalysisManager\CoverAnalysisManager.cpp
  ManagerModel\DFHPlan\CalPDOP.cpp
  ManagerModel\DFHPlan\ConstellationCoverPlan.cpp
  ManagerModel\DFHPlan\ConstellationCoverPlanCacheData.cpp
  ManagerModel\DFHPlan\DynamicPlanning.cpp
  ManagerModel\DFHPlan\PlanTree.cpp
  ManagerModel\DJDZGRManager\DJDZGRManager.cpp
  ManagerModel\EleDetectPlan\EleDetectManager.cpp
  ManagerModel\EleInterfPlan\ECMInterfManager.cpp
  ManagerModel\EleInterfPlan\EleInterfManagers.cpp
  ManagerModel\EnvironmentManagers\OdebrisFilter.cpp
  ManagerModel\EnvironmentManagers\OdebrisManager.cpp
  ManagerModel\GEOObservePlan\GEOObserveCameraManager.cpp
  ManagerModel\HeatMapRegionCoverManager\HeatMapRegionCoverManager.cpp
  ManagerModel\KeyEventShow\KeyEventShowManager.cpp
  ManagerModel\LaserAttackMng\ExecuteLaser.cpp
  ManagerModel\LaserAttackMng\LaserAttackMng.cpp
  ManagerModel\LaserWeaponAttackMng\LaserWeaponAttackMng.cpp
  ManagerModel\NavigateAnalysisManager\NavigateAnalysisManager.cpp
  ManagerModel\OpticalDetectManager\OpticalDetectManager.cpp
  ManagerModel\OrbitIdentify\OrbitOperation.cpp
  ManagerModel\GroundEquipmentPlan\GroundEquipmentPlanManager.cpp
  ManagerModel\GroundTargetObserveSystem\GroundTargetObserveSystem.cpp
  ManagerModel\InfraredWarning\InfraredWarningManager.cpp
  ManagerModel\LEOObservePlan\LEOObserveCameraManager.cpp
  ManagerModel\OrbitIdentify\OrbitOperation.cpp
  ManagerModel\ReconnaissanceManager\ReconnaissanceManager.cpp
  ManagerModel\RegionCoverAnalysisPlan\RegionCoverAnalysisPlan.cpp
  ManagerModel\RevisitAnalysisManager\RevisitAnalysisManager.cpp
  ManagerModel\SarManager\SarManager.cpp
  ManagerModel\SatLaunch\SatLaunch.cpp
  ManagerModel\SpaceborneTargetObserveSystem\SpaceborneTargetObserveManager.cpp
  ManagerModel\TJTargetObserveSystem\DataInterfaceNew2p2.pb.cpp
  ManagerModel\TJTargetObserveSystem\DllSample.cpp
  ManagerModel\TJTargetObserveSystem\TJGEOSpaceTargetObserveManager.cpp
  ManagerModel\TJTargetObserveSystem\TJGroundMSRadarTargetObserveSystem.cpp
  ManagerModel\TJTargetObserveSystem\TJGroundOpticalTargetObserveSystem.cpp
  ManagerModel\TJTargetObserveSystem\TJGroundPARadarTargetObserveSystem.cpp
  ManagerModel\TJTargetObserveSystem\TJGroundRadarMultiTargetObserveSystem.cpp
  ManagerModel\TJTargetObserveSystem\TJLEOSpaceTargetObserveManager.cpp
  ManagerModel\TJTargetObserveSystem\TJTargetObserveJointPlanManager.cpp
  ManagerModel\TJTargetObserveSystem\TJTargetObserveManager.cpp
  ManagerModel\WDDKManager\WDDKManager.cpp
  ManagerModel\ZZPlan\AttackManager.cpp
  ManagerModel\ZZPlan\ImpulsePlanMng.cpp
  ManagerModel\ZZPlan\ObtTransferManager.cpp
  ManagerModel\ZZPlan\ObtTransferHeader.cpp
  ManagerModel\ZZPlan\ObtTransferPlan.cpp
  ObjectAdapter.cpp
  ObjectAdapterFactory.cpp
  ObjectModel\CommunicationAntenna\GroundReceiveSensor.cpp
  ObjectModel\CommunicationAntenna\GroundSendSensor.cpp
  ObjectModel\CommunicationAntenna\SatReceiveSensor.cpp
  ObjectModel\CommunicationAntenna\SatSendSensor.cpp
  ObjectModel\Communication\ComLink.cpp
  ObjectModel\DKInterferenceSensor\DKInterferenceSensor.cpp
  ObjectModel\Earth.cpp
  ObjectModel\ECMWeapon\ECMWeapon.cpp
  ObjectModel\EleDetect\EleDetect.cpp
  ObjectModel\Environment\EnvironmentElement.cpp
  ObjectModel\Environment\FilterOdebris.cpp
  ObjectModel\Environment\Odebris.cpp
  ObjectModel\GEOObserveCamera\GEOObserveCamera.cpp
  ObjectModel\GroundStation\GroundStation.cpp
  ObjectModel\InfraredWarningCamera\InfraredWarningCamera.cpp
  ObjectModel\InfraredWarningCamera\ScanningCamera.cpp
  ObjectModel\InfraredWarningCamera\StaringCamera.cpp
  ObjectModel\LaserWeapon\LaserWeapon.cpp
  ObjectModel\LEOObserveCamera\LEOObserveCamera.cpp
  ObjectModel\MissileIntercept\MissileIntercept.cpp
  ObjectModel\Missile\InterceptMissile.cpp
  ObjectModel\Missile\Missile.cpp
  ObjectModel\Missile\MissileSixNum.cpp
  ObjectModel\Missile\MissileTrackPara.cpp
  ObjectModel\ObjectClassification.cpp
  ObjectModel\OSGCamera.cpp
  ObjectModel\Power\Power.cpp
  ObjectModel\Region\Region.cpp
  ObjectModel\Robots\RobotsSensor.cpp
  ObjectModel\Sat\Sat.cpp
  ObjectModel\Sat\SatOrbitPara.cpp
  ObjectModel\Sat\SatOrbitSixNum.cpp
  ObjectModel\Sat\SatOrbitTransfer.cpp
  ObjectModel\Sat\SatOrbitTwoBody.cpp
  ObjectModel\Sat\SatOrbitTwoLine.cpp
  ObjectModel\Scene.cpp
  ObjectModel\Sensor\ConeCoverSensor.cpp
  ObjectModel\Sensor\CoverSensor.cpp
  ObjectModel\Sensor\MSRadar.cpp
  ObjectModel\Sensor\OpticalDetectSensor.cpp
  ObjectModel\Sensor\PARadar.cpp
  ObjectModel\Sensor\PointSkySensor.cpp
  ObjectModel\Sensor\Radar.cpp
  ObjectModel\Sensor\RectCoverSensor.cpp
  ObjectModel\Sensor\SarSensor.cpp
  ObjectModel\Sensor\Sensor.cpp
  ObjectModel\Sensor\SensorShape\ConeCoverSensorShapeCal.cpp
  ObjectModel\Sensor\SensorShape\RectCoverSensorShapeCal.cpp
  ObjectModel\Sensor\SensorShape\SensorShape.cpp
  ObjectModel\Sensor\SensorShape\SensorShapeCalculate.cpp
  ObjectModel\Ship\Ship.cpp
  ObjectModel\Targets\LoadTargets.cpp
  ObjectModel\Targets\TargetGEOSats.cpp
  ObjectModel\TheSun.cpp
  ObjectModel\Vehicle\Vehicle.cpp
  OpticalDetectOperation.cpp
  PlanOperation.cpp
  ProjectLib\SensorCover\CoverSensorLib.cpp
  ScriptLoader.cpp
  stdafx.cpp
  TargetObserveOperation.cpp
  Util\Cond.cpp
  Util\ConvertUTF.cpp
  Util\CountDownLatch.cpp
  Util\CtrlCHandler.cpp
  Util\Exception.cpp
  Util\FileUtil.cpp
  Util\InputUtil.cpp
  Util\MutexProtocol.cpp
  Util\Options.cpp
  Util\OutputUtil.cpp
  Util\Random.cpp
  Util\RecMutex.cpp
  Util\Shared.cpp
  Util\StringUtil.cpp
  Util\Thread.cpp
  Util\ThreadException.cpp
  Util\Time.cpp
  Util\Timer.cpp
  Util\Unicode.cpp
  Util\UUID.cpp
  XBase64\Base64.cpp
  XJson\json_reader.cpp
  XJson\json_value.cpp
  XJson\json_writer.cpp
  Xml\tinystr.cpp
  Xml\tinyxml.cpp
  Xml\tinyxmlerror.cpp
  Xml\tinyxmlparser.cpp
  Xml\xmlobject.cpp
  Xml\xmlutils.cpp
  XSocket\mongoose.c
)

add_executable(${PROJECT_NAME} ${SOURCES})

target_include_directories(${PROJECT_NAME} PRIVATE
)

